# DiscordManimator

./: .dockerignore  Dockerfile  README.md  example.config.toml  pyproject.toml  requirements.txt  zeabur.template.yaml
discordmanimator/: DiscordManimator.py  __main__.py  config.py  health.py  logging_config.py  snippet_parser.py
discordmanimator/cogs/: render_codeblock.py  search_doc.py
scripts/: zeabur-entrypoint.sh
tests/: test_cogs.py  test_config.py  test_main.py  test_snippet_parser.py
